# sc20_vendor_qcom_proprietary

SmartCardService/GsmaServices/: AndroidManifest.xml
android-perf/app-trigger/: Android.mk  qti-app_trigger.c
android-perf/core-ctl/: Android.mk  core_ctl.c
android-perf/mp-ctl/: Android.mk  mp-ctl.c
bt/hci_qcomm_init/: bt_qmi_dms_client.c  btnvtool.cpp  btqsocnvmtags.c
cne/api/: ICneNetworkObserverNotifier.h
common/config/: device-vendor.mk  public.libraries.txt  qtic-config.mk
common/msm8909/: BoardConfigVendor.mk
common/msm8909_LMT/: BoardConfigVendor.mk
common/msm8916/: BoardConfigVendor.mk
common/msm8916_32/: BoardConfigVendor.mk
common/msm8994/: BoardConfigVendor.mk
common/scripts/: Android.mk
csm/: Android.mk  AndroidManifest.xml
csm/libdata/: DataCtl.cpp
data/radish/: radish.c
diag/PktRspTest/: PktRspTest.c
diag/include/: diagcmd.h  diagpkt.h  log.h  msgcfg.h  msgtgt.h
diag/mdlog/: Android.mk  diag_mdlog.c
diag/qshrink4_daemon/: diag_qshrink4_daemon.c
diag/socket_log/: diag_socket_log.c
diag/src/: diag_lsm.c  diag_lsm_log.c  diag_lsm_msg.c  diag_lsm_pkt.c  diag_lsm_pkt_i.h  diagdiag.h  msg_arrays_i.c
diag/test/: test_diag.c
fastmmi/: Android.mk  Makefile.am  mmi.mk
fastmmi/libmmi/: Android.mk  board.cpp  button.cpp  button.h  common.h  util_comm.cpp
fastmmi/mmi/: Android.mk  Test.h  ate_rtest.cpp  ate_rtest.h  config.cpp  config.h  controller.cpp  diag_ext.h  draw.cpp  fb_test.cpp  fb_test.h  func_map.cpp  input.cpp  input.h  mmi.cpp  mmi.h  mmi_cfg.cpp  module.cpp
fm/fmtest/: fmhalcmds.c
fm/hal_ss_test/: ConfFileParser.cpp
fm/patch_downloader/: Android.mk  fm_qsoc_patches.c
ftm/: Android.mk  Makefile.am  configure.ac  ftm_bt_hci_pfal_linux.c  ftm_fm_pfal_linux_3990.c  ftm_main.c  ftm_nfc.h  ftm_nfcnq.c  ftm_nfcnq.h
ftm/wds/: Android.mk  wds_hci_pfal.h  wds_hci_pfal_linux.c  wds_main.c
gps/: Android.mk
gps/SnapdragonSDKTest/: Android.mk  AndroidManifest.xml
gps/daemon/: Android.mk
gps/etc/: izat.conf
gps/framework/: Android.mk  AndroidManifest.xml
gps/launcher/: process_launcher.c
gps/location_hal_test/: Android.mk  location_hal_test.cpp
ims-ship/: Android.mk
ims-ship/qmi/: Android.mk  ip_multimedia_subsystem_ims_common_v01.c  ip_multimedia_subsystem_ims_common_v01.h  ip_multimedia_subsystem_settings_v01.c  ip_multimedia_subsystem_settings_v01.h
kernel-tests/: test_env_setup.sh
kernel-tests/fbtest/: Android.mk  fbtest.h  postproctest.c  postproctest.h
kernel-tests/gpio_tlmm/: gpio_lib.conf  gpio_lib.sh
kernel-tests/qcedev/: Android.mk  qcedev_test.h
kernel-tests/vfp/: vfptest.c
mm-audio/audio-listen/: Android.mk
mm-audio/omx/: Android.mk
mm-audio/sound_trigger/sound_trigger_intf/smwrapper/: Makefile.am  smwrapper.c
mm-audio/sound_trigger/sound_trigger_intf/src/: Makefile.am  NOTICE  pcm.c  sound_trigger_hw.c  sound_trigger_platform.c  sound_trigger_transition.c
mm-audio/sound_trigger/sound_trigger_intf/st_extn/: Makefile.am  sound_trigger_extn.c
mm-audio/sound_trigger/sound_trigger_intf/st_extn/inc/: sound_trigger_extn.h
mm-audio/sound_trigger/sound_trigger_intf/test/: Makefile.am  acdb_helper.c  sound_trigger_test.c  ucm_helper.c
mm-http/AAL/: Android_AAL.mk
mm-osal/src/: MMDebug.c
mm-parser/Android_adaptation/: Android.mk
mm-parser/Extended_extractor/: Android.mk
mm-rtp/: Android.mk
mm-rtp/decoder/: Android.mk
mm-rtp/encoder/: Android.mk
mm-still/codec_v1/: Android.mk
mm-video-utils/vtest-omx/: Android.mk
msmirqbalance/: msm_irqbalance.c
nqnfc-firmware/: Android.mk  libnfc-mtp-NQ3XX.conf  libnfc-qrd-NQ3XX.conf
oem-services/BackupAgent/: Android.mk
peripheral-manager/pm-server/: Android.mk  Peripheral.cpp  PeripheralManagerServer.cpp
prebuilt_HY11/: AU_INFO.txt  Android.mk
qcom-system-daemon/: qcom_system_daemon.c
qcril/: Android.mk  qcrillib.mak
qcril-qmi-services/: persistent_device_configuration_v01.c  persistent_device_configuration_v01.h  user_identity_module_v01.c  user_identity_module_v01.h  voice_service_v02.c  voice_service_v02.h
qcril/qcril_database/: Android.mk  qcril.sql
qcril/qcril_qmi/: qcril.c  qcril_am.cc  qcril_arb.c  qcril_db.c  qcril_db.h  qcril_file_utils.c  qcril_file_utils.h  qcril_log.c  qcril_mbn_meta.c  (+21 more)
qcrilOemHook/: AndroidManifest.xml
quec-server/: Android.mk  QuecService  quec.mk
rfs_access/: Android.mk
securemsm/: configure.ac
securemsm/sampleclient/: Android.mk  Makefile.am  qseecom_sample_client.c
sensors/: Android.mk
tftp/: Android.mk
thermal-engine/: Android.mk  ss-data.c  thermal_monitor-data-8916.c  thermal_util.c
time-services/: Android.mk  time_daemon_qmi.c
(+5102 files in other folders)
